fix visible link

--- a/src/app/pages/viewElastic/viewElastic.component.scss
+++ b/src/app/pages/viewElastic/viewElastic.component.scss
@@ -1,4 +1,7 @@
 .new-btn {
-  float: right;
-  margin-top: -50px;
+  margin-top: -65px;
+  margin-left: 372px;
+}
+.size {
+  width: 360px;
 }
